[tool.poetry]
name = "incolume.py.prospect.arjan-codes-howto-use-fastapi"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
readme = "README.md"
packages = [{include = "incolume"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
